resync jsr166 tck tests for more scenarios